fix some styles

--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -18,7 +18,7 @@
                 <div class="table_header_cell"><p>Действия</p></div>
             </div>
             <div id="table_line" class="table_line">
-                <div class="table_line_cell"><input value="4"></div>
+                <div class="table_line_cell"><input value="4dfgdfdfbhdfhbdfnfghrt54b4ghdfhrth4gergveh54gdghjfgjghnfgndfbdfhdhjdfnfgntndfnbergrth54yh"></div>
                 <div class="table_line_cell"><input value="3"></div>
                 <div class="table_line_cell"><input value="2"></div>
                 <div class="table_line_cell"><input value="1"></div>
